<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/page"
    android:background="@color/white"
    tools:context=".MainActivity">

    <!--  SPACING EACH SIDE  -->
    <RelativeLayout
        style="@style/page_spacing_side"
        android:id="@+id/relativeLayoutStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <RelativeLayout
        style="@style/page_spacing_side"
        android:id="@+id/relativeLayoutEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!--  WELCOME TITLE  -->
    <RelativeLayout
        style="@style/home_welcome_title"
        android:id="@+id/home_section_title"
        app:layout_constraintStart_toEndOf="@id/relativeLayoutStart"
        app:layout_constraintEnd_toStartOf="@id/relativeLayoutEnd"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/home_welcome_title"
            style="@style/home_title"
            android:textColor="@color/black"/>
    </RelativeLayout>

    <!--  WEEK EDIT SUBTITLES  -->
    <RelativeLayout
        android:id="@+id/relativeLayoutSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/relativeLayoutStart"
        app:layout_constraintEnd_toStartOf="@id/relativeLayoutEnd"
        app:layout_constraintTop_toBottomOf="@id/home_section_title">

        <TextView
            android:textColor="@color/black"
            style="@style/home_subtitle"
            android:id="@+id/week_title"
            android:text="@string/home_subtitle_week" />

        <TextView
            android:id="@+id/edit_text"
            style="@style/home_subtitle"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"
            android:text="@string/home_edit"
            android:textColor="@color/orange"/>
    </RelativeLayout>

    <!--  WEEK CALENDAR -->
    <RelativeLayout
        android:id="@+id/week_grid"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toEndOf="@id/relativeLayoutStart"
        app:layout_constraintEnd_toStartOf="@id/relativeLayoutEnd"
        app:layout_constraintTop_toBottomOf="@id/relativeLayoutSubtitle"
        android:orientation="horizontal"/>

    <!--  TODAY PLAN SUBTITLE  -->
    <RelativeLayout
        style="@style/home_today_plan_subtitle"
        android:id="@+id/plan_title"
        app:layout_constraintStart_toEndOf="@id/relativeLayoutStart"
        app:layout_constraintTop_toBottomOf="@id/week_grid">

        <TextView
            android:id="@+id/today_plan_subtitle"
            style="@style/home_subtitle"
            android:text="@string/home_subtitle_plan_today" />
    </RelativeLayout>

    <!--  TODAY PLAN LAYOUT  -->
    <RelativeLayout
        android:id="@+id/plan_today"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toStartOf="@+id/relativeLayoutEnd"
        app:layout_constraintStart_toEndOf="@+id/relativeLayoutStart"
        app:layout_constraintTop_toBottomOf="@+id/plan_title"/>

    <FrameLayout
        android:id="@+id/plan_today_frame_layout"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@drawable/home_plan_component"
        app:layout_constraintBottom_toBottomOf="@+id/plan_today"
        app:layout_constraintEnd_toEndOf="@+id/plan_today"
        app:layout_constraintStart_toStartOf="@+id/plan_today"
        app:layout_constraintTop_toTopOf="@+id/plan_today"/>

    <TextView
        android:id="@+id/today_plan_title"
        style="@style/plan_layout_title"
        app:layout_constraintBottom_toBottomOf="@+id/plan_today_frame_layout"
        app:layout_constraintStart_toStartOf="@+id/plan_today" />

    <!--  WORKOUT DETAIL LAYOUT  -->
    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/plan_today"
        app:layout_constraintStart_toStartOf="@+id/plan_today"
        app:layout_constraintTop_toBottomOf="@+id/plan_today"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/more_plan_btn"
        app:layout_constraintEnd_toEndOf="@+id/relativeLayout2"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout2"
        app:layout_constraintTop_toBottomOf="@+id/plan_today">

        <RelativeLayout
            android:id="@+id/today_plan_detail_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/more_plan_btn"
            app:layout_constraintEnd_toEndOf="@+id/relativeLayout2"
            app:layout_constraintStart_toStartOf="@+id/relativeLayout2"
            app:layout_constraintTop_toBottomOf="@+id/plan_today" />
    </ScrollView>

    <!--  SEE MORE PLAN BTN   -->
    <TextView
        style="@style/home_see_more_button"
        android:textColor="@color/orange"
        android:id="@+id/more_plan_btn"
        android:text="@string/home_see_more_plan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/relativeLayout2"
        app:layout_constraintStart_toStartOf="@+id/plan_today" />
</androidx.constraintlayout.widget.ConstraintLayout>
